Fixingspacing around article alert message

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -273,14 +273,10 @@
             .article-content {
                 background-color: #ffffffde;
                 color: #505050;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-around;
-                margin-top: 3.5rem;
-                padding-top: 30px;
+                padding-top: 20px;
                 width: 80%;
-                height: 100%;
                 margin: auto;
+                height: 100%;
 
                 .article {
                     color: #505050;
